--- a/extensions/instahop/assets/instagram-lightbox.css
+++ b/extensions/instahop/assets/instagram-lightbox.css
@@ -79,11 +79,13 @@
 .grid-post {
   position: relative;
   overflow: hidden;
+  aspect-ratio: 1 / 1;
 }
 
 .grid-img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   display: block;
 }
 
@@ -193,7 +195,6 @@
   margin: 0 auto;
   display: flex;
   background: white;
-  border-radius: 12px;
   overflow: hidden;
   position: relative;
 }
@@ -230,12 +231,12 @@
 }
 
 .instagram-logo {
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
 }
 
 .lightbox-username {
-  font-weight: 600;
+  font-weight: 400;
   font-size: 14px;
   color: #262626;
 }
