--- a/extensions/instahop/blocks/instagram-feed.liquid
+++ b/extensions/instahop/blocks/instagram-feed.liquid
@@ -18,15 +18,15 @@
               loading="lazy"
               class="carousel-img"
             >
-            {% assign hasVideo = false %}
+            {% assign has_video = false %}
             {% if post.mediaType == 'VIDEO' %}
-              {% assign hasVideo = true %}
+              {% assign has_video = true %}
             {% elsif post.carouselImages %}
               {% if post.carouselImages contains '"type":"VIDEO"' %}
-                {% assign hasVideo = true %}
+                {% assign has_video = true %}
               {% endif %}
             {% endif %}
-            {% if hasVideo %}
+            {% if has_video %}
               <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" style="width: 48px; height: 48px; opacity: 0.9; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
@@ -66,15 +66,15 @@
             loading="lazy"
             class="grid-img"
           >
-          {% assign hasVideo = false %}
+          {% assign has_video = false %}
           {% if post.mediaType == 'VIDEO' %}
-            {% assign hasVideo = true %}
+            {% assign has_video = true %}
           {% elsif post.carouselImages %}
             {% if post.carouselImages contains '"type":"VIDEO"' %}
-              {% assign hasVideo = true %}
+              {% assign has_video = true %}
             {% endif %}
           {% endif %}
-          {% if hasVideo %}
+          {% if has_video %}
             <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;">
               <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" style="width: 48px; height: 48px; opacity: 0.9; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
